--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,3 +4,17 @@ html,body,#app {
 	margin: 0;
 	padding: 0;
 }
+.el-breadcrumb{
+	margin-bottom: 15px;
+	font-size: 12px;
+}
+.el-card{
+	box-shadow: 0 1px 1px #ddd!important;
+}
+.el-table {
+	margin-top: 15px;
+	font-size: 12px!important;
+}
+.el-pagination{
+	margin-top: 15px;
+}
