--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -23,3 +23,12 @@ html,body,#app {
 .el-cascader-menu {
 	height: 200px;
 }
+.el-steps{
+	margin: 15px 0;
+}
+.el-step__title{
+	font-size: 13px!important;
+}
+.ql-editor{
+	min-height: 300px;
+}
